#737: add tests